# codan

./: .env  .env.development  .env.production  .env.staging  .gitignore  ENV_SETUP_GUIDE.md  README.md  package-lock.json  pubspec.yaml
android/: build.gradle.kts
android/app/: build.gradle.kts
codan_backend/: .env.example  API_DOCUMENTATION.md  FLUTTER_API_INTEGRATION.md  composer.json  deploy.bat  deploy.sh  erd-output.txt  ftp-deploy.cjs  package-lock.json  package.json  test_connection.php
codan_backend/.github/workflows/: deploy.yml
codan_backend/app/Events/: MessageDeleted.php  MessageRead.php  MessageSent.php
codan_backend/app/Models/: Category.php  Message.php  OTPLog.php  Offer.php  Produk.php  ProdukImage.php  Report.php  Review.php  User.php  (+1 more)
codan_backend/config/: services.php
codan_backend/docs/: OTP_AND_MYSQL_SETUP.md
codan_backend/graphviz-14.1.5/: CHANGELOG.md  Doxyfile  Makefile.in  aclocal.m4  builddate.h  config.h.in  configure  configure.ac  version.m4
codan_backend/graphviz-14.1.5/plugin/ascii/: Makefile.am  Makefile.in
codan_backend/routes/: api.php  auth.php  channels.php  web.php
docs/: laravel_auth_controller.php  laravel_integration.md  laravel_otp_fonnte_integration.md  testing_guide.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+333 files in other folders)
